# plugin-symbols

./: Cargo.toml  flake.nix
src/: lib.rs
